--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Agenda de Contatos</title>
+  <title>Lista de Compras</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Agenda de Contatos</h1>
+    <h1>Lista de Compras</h1>
 
     <!-- Formulário de Cadastro -->
-    <form id="form-contato">
+    <form id="form-lista">
       <input type="text" id="nome" placeholder="Nome" required />
       <input type="text" id="marca" placeholder="Marca" />
       <input type="text" id="quantidade" placeholder="Quantidade" />
@@ -19,12 +19,12 @@
 
     <!-- Tabela de Listagem -->
     <table>
+      <tbody id="tabela-lista"></tbody>
       <thead>
         <tr>
           <th>Nome</th>
           <th>Marca</th>
           <th>Quantidade</th>
-          <th>Ações</th>
         </tr>
       </thead>
       <tbody id="tabela-Compras">
